sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:4: error: '(' expected but identifier found.
    while plusPetitQue(i,i+1) {
          ^AlgBubbleSort1:12: error: illegal start of simple expression
  }
  ^